Bug #17625
set_acl fails for object beginning and ending in underscore
% Done:
0%
Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature:
Description
key = bucket.new_key('_temp2_')
key.set_contents_from_filename('tempfile')
key.set_canned_acl('private')
will fail with 404
Related issues
History
#1 Updated by Ken Dreyer about 4 years ago
- Status changed from Fix Under Review to In Progress
- Assignee set to Orit Wasserman
PR for master: https://github.com/ceph/ceph/pull/11566
#2 Updated by Orit Wasserman about 4 years ago
- Status changed from In Progress to Fix Under Review
#3 Updated by Casey Bodley about 4 years ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Loic Dachary about 4 years ago
- Copied to Backport #17674: jewel: set_acl fails for object beginning and ending in underscore added
#5 Updated by Orit Wasserman about 4 years ago
- Priority changed from Urgent to High
#6 Updated by Yehuda Sadeh about 4 years ago
- Status changed from Pending Backport to Resolved